ADD Point Cloud.

--- a/voxelMap/Base.lproj/Main.storyboard
+++ b/voxelMap/Base.lproj/Main.storyboard
@@ -16,25 +16,39 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1s-KP-INU">
+                                <rect key="frame" x="0.0" y="740" width="414" height="122"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="122" id="jvV-xo-y0V"/>
+                                </constraints>
+                                <state key="normal" title="make Voxels"/>
+                                <connections>
+                                    <action selector="makeVoxels:" destination="BV1-FR-VrT" eventType="touchUpInside" id="cgy-xy-w7r"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="leading" secondItem="BrB-h1-WRS" secondAttribute="leading" id="Cua-jK-oMa"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="GsS-dJ-CKf"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="VpT-BR-CcM"/>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" constant="696" id="Jgv-cD-Vdw"/>
+                            <constraint firstItem="BrB-h1-WRS" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" constant="34" id="VpT-BR-CcM"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XyZ-9z-H8e"/>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="bottom" secondItem="fQZ-KI-GVf" secondAttribute="bottom" id="Yyd-CI-LSh"/>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="trailing" secondItem="BrB-h1-WRS" secondAttribute="trailing" id="egK-aX-GAV"/>
                             <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" id="rJc-2c-zQA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="oYD-G8-Ku8"/>
+                        <outlet property="augmentedRealityView" destination="BrB-h1-WRS" id="NqE-7Y-K4v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="24"/>
+            <point key="canvasLocation" x="131.8840579710145" y="23.4375"/>
         </scene>
     </scenes>
 </document>
