--- a/voxelMap/Base.lproj/Main.storyboard
+++ b/voxelMap/Base.lproj/Main.storyboard
@@ -16,18 +16,8 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BrB-h1-WRS">
-                                <rect key="frame" x="0.0" y="76" width="414" height="523"/>
+                                <rect key="frame" x="0.0" y="76" width="414" height="515"/>
                             </arscnView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1s-KP-INU">
-                                <rect key="frame" x="0.0" y="807" width="414" height="89"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="89" id="Q8m-Qs-6Ht"/>
-                                </constraints>
-                                <state key="normal" title="make Voxels"/>
-                                <connections>
-                                    <action selector="makeVoxels:" destination="BV1-FR-VrT" eventType="touchUpInside" id="cgy-xy-w7r"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoDark" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lth-qd-Dfl">
                                 <rect key="frame" x="369" y="44" width="25" height="24"/>
                                 <constraints>
@@ -38,13 +28,6 @@
                                     <action selector="goToMap:" destination="BV1-FR-VrT" eventType="touchUpInside" id="7lY-yd-BRr"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gN-nD-hm5">
-                                <rect key="frame" x="0.0" y="615" width="414" height="192"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="4gN-nD-hm5" secondAttribute="height" multiplier="69:32" id="RJw-8B-W7x"/>
-                                </constraints>
-                            </view>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="5" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Oga-eT-QnB">
                                 <rect key="frame" x="20" y="44" width="343" height="30"/>
                                 <constraints>
@@ -71,28 +54,45 @@
                                     <constraint firstAttribute="height" constant="21" id="SWb-cy-gaw"/>
                                 </constraints>
                             </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o1s-KP-INU">
+                                <rect key="frame" x="349" y="76" width="65" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="XZM-oF-3nf"/>
+                                    <constraint firstAttribute="height" constant="50" id="dQX-21-DFj"/>
+                                </constraints>
+                                <state key="normal" image="repeat" catalog="system"/>
+                                <connections>
+                                    <action selector="makeVoxels:" destination="BV1-FR-VrT" eventType="touchUpInside" id="cgy-xy-w7r"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="4gN-nD-hm5">
+                                <rect key="frame" x="0.0" y="599" width="414" height="297"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="297" id="8OX-S3-6z8"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="1Xw-Lu-9DI"/>
+                            <constraint firstItem="4gN-nD-hm5" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="1l6-MP-wZ9"/>
                             <constraint firstAttribute="trailing" secondItem="iwQ-6v-fMU" secondAttribute="trailing" constant="40" id="5lt-lF-ECX"/>
                             <constraint firstItem="fQZ-KI-GVf" firstAttribute="trailing" secondItem="lth-qd-Dfl" secondAttribute="trailing" constant="20" id="7N5-hw-RrL"/>
-                            <constraint firstItem="o1s-KP-INU" firstAttribute="top" secondItem="4gN-nD-hm5" secondAttribute="bottom" id="D91-AB-42g"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="lth-qd-Dfl" secondAttribute="bottom" constant="8" id="NJw-fW-VrK"/>
-                            <constraint firstItem="4gN-nD-hm5" firstAttribute="top" secondItem="BrB-h1-WRS" secondAttribute="bottom" constant="16" id="O5m-rV-VRs"/>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="top" secondItem="Oga-eT-QnB" secondAttribute="bottom" constant="3" id="8sN-09-aJb"/>
                             <constraint firstItem="lth-qd-Dfl" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" id="OV3-yW-Khc"/>
                             <constraint firstItem="Oga-eT-QnB" firstAttribute="top" secondItem="fQZ-KI-GVf" secondAttribute="top" id="SWW-3V-fSO"/>
                             <constraint firstItem="iwQ-6v-fMU" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" constant="11" id="SaY-la-pgx"/>
-                            <constraint firstItem="4gN-nD-hm5" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="TtY-79-3XX"/>
-                            <constraint firstItem="o1s-KP-INU" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="WL6-DU-wLw"/>
-                            <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="WQZ-52-pgo"/>
-                            <constraint firstItem="o1s-KP-INU" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="XON-bq-faS"/>
+                            <constraint firstItem="4gN-nD-hm5" firstAttribute="top" secondItem="BrB-h1-WRS" secondAttribute="bottom" constant="8" id="SkD-b8-1Hq"/>
+                            <constraint firstItem="4gN-nD-hm5" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="V8N-Ed-u7G"/>
+                            <constraint firstItem="o1s-KP-INU" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="VTs-Mm-iZB"/>
+                            <constraint firstItem="BrB-h1-WRS" firstAttribute="trailing" secondItem="fQZ-KI-GVf" secondAttribute="trailing" id="WG9-NQ-HtP"/>
                             <constraint firstItem="6KY-1n-BLg" firstAttribute="leading" secondItem="U0K-SW-4ec" secondAttribute="leading" constant="22" id="ZOH-Ih-11Q"/>
+                            <constraint firstItem="BrB-h1-WRS" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="fK6-Lu-OKq"/>
                             <constraint firstItem="lth-qd-Dfl" firstAttribute="leading" secondItem="Oga-eT-QnB" secondAttribute="trailing" constant="8" id="g5b-D9-1j7"/>
                             <constraint firstItem="Oga-eT-QnB" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" constant="22" id="gv5-na-e3h"/>
-                            <constraint firstItem="4gN-nD-hm5" firstAttribute="leading" secondItem="fQZ-KI-GVf" secondAttribute="leading" id="oVs-9a-Huh"/>
+                            <constraint firstItem="BrB-h1-WRS" firstAttribute="top" secondItem="Oga-eT-QnB" secondAttribute="bottom" constant="3" id="kGJ-51-0Kj"/>
+                            <constraint firstAttribute="bottom" secondItem="4gN-nD-hm5" secondAttribute="bottom" id="ypg-lq-uYP"/>
                             <constraint firstItem="6KY-1n-BLg" firstAttribute="top" secondItem="U0K-SW-4ec" secondAttribute="top" constant="15" id="ytU-Mr-5T5"/>
-                            <constraint firstAttribute="bottom" secondItem="o1s-KP-INU" secondAttribute="bottom" id="zId-YQ-vm4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fQZ-KI-GVf"/>
                     </view>
@@ -144,4 +144,7 @@
             <point key="canvasLocation" x="935" y="23"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="repeat" catalog="system" width="64" height="48"/>
+    </resources>
 </document>
